[package]
name = "ampr-api"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Rust library for interacting with the 44net API"
documentation = "https://docs.rs/ampr-api"
readme = "README.md"
homepage = "https://github.com/ewpratten/ampr-api"
repository = "https://github.com/ewpratten/ampr-api"
license = "GPL-3.0"
keywords = ["amprnet", "ampr", "44net", "amateur-radio"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = "0.11"
semver = "1.0"
